# ChangeLog for net-misc/nylon
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nylon/ChangeLog,v 1.2 2003/02/12 08:29:37 vapier Exp $

*nylon-1.1 (01 Jan 2003)

  01 Jan 2003; Kain <kain@kain.org> nylon-1.1.ebuild, files/nylon.conf :
  Initial import.  Ebuild submitted by Daniel Mannarino 
  <thesnark@operamail.com>.  This builds fine on x86 and ppc, so they both
  get the ~.