@@ -1,4 +1,6 @@
-MD5 7c4946514f65ec332edc3e6feba8c981 files/digest-nylon-1.1 60
-MD5 e1b63feed8ceb446c06e3ac7d264665f files/nylon.conf 782
-MD5 bd2f603422305dae141e7d8dc108edd3 ChangeLog 454
 MD5 6c41cee205695fc64d4ccf42389750bf nylon-1.1.ebuild 547
+MD5 491a2a52f553a59e285d9dbc149e0d83 ChangeLog 561
+MD5 f275e86ab9230ed0b847f83503e5cf32 nylon-1.2.ebuild 546
+MD5 e1b63feed8ceb446c06e3ac7d264665f files/nylon.conf 782
+MD5 7c4946514f65ec332edc3e6feba8c981 files/digest-nylon-1.1 60
+MD5 259a9a863cc3aad90a374ea0bc18f864 files/digest-nylon-1.2 60
