@@ -1,0 +1,20 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nylon/nylon-1.2.ebuild,v 1.1 2004/05/10 13:24:04 aliz Exp $
+
+DESCRIPTION="A lightweight SOCKS proxy server"
+HOMEPAGE="http://monkey.org/~marius/nylon/"
+SRC_URI="http://monkey.org/~marius/nylon/${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~x86 ~ppc"
+
+DEPEND=">=dev-libs/libevent-0.6"
+
+src_install() {
+	einstall || die
+	dodoc README THANKS
+	insinto /etc
+	doins ${FILESDIR}/nylon.conf
+}
