@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/nylon
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nylon/ChangeLog,v 1.2 2003/02/12 08:29:37 vapier Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nylon/ChangeLog,v 1.3 2004/05/10 13:24:04 aliz Exp $
+
+*nylon-1.2 (10 May 2004)
+
+  10 May 2004; Daniel Ahlberg <aliz@gentoo.org> nylon-1.2.ebuild:
+  Version bump.
 
 *nylon-1.1 (01 Jan 2003)
 
